--- a/vti-academy-backend/src/main/resources/application.properties
+++ b/vti-academy-backend/src/main/resources/application.properties
@@ -3,12 +3,12 @@ server.port=8888
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/final
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Ducanh!998
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 ##spring.main.allow-bean-definition-overriding=true
 #spring.main.allow-circular-references=true
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
