--- a/vti-academy-backend/src/main/resources/application.properties
+++ b/vti-academy-backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8888
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/final
 spring.datasource.username=root
-spring.datasource.password=Ducanh!998
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
