--- a/vti-academy-backend/src/main/resources/application.properties
+++ b/vti-academy-backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8888
 
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/final
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net/heroku_3bf170953247207
+spring.datasource.username=b82d4c2b9b4a2e
+spring.datasource.password=4e68641b
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=none
